--- a/GestioneCorsi/WebContent/footer.html
+++ b/GestioneCorsi/WebContent/footer.html
@@ -2,8 +2,8 @@
 	<h1>Navigazione</h1>
 	<ul>
 		<li><a href="paginaprincipale.jsp">Pagina principale</a></li>
-		<li><a href="acquisti.jsp">Acquista on-line</a></li>
-		<li><a href="carrello.jsp">Riepilogo acquisti</a></li>
+		<li><a href="acquisti.jsp">Crea un corso</a></li>
+		<li><a href="carrello.jsp">Riepilogo corsi</a></li>
 	</ul>
 </nav>
 <nav>
@@ -18,7 +18,7 @@
 <section>
 	<h1>Social Media</h1>
 		<ul>
-			<li><a href="#">Facebook</a></li>
+			<li><a href="#" color text="white">Facebook</a></li>
 			<li><a href="#">Instagram</a></li>
 			<li><a href="#">Twitter</a></li>
 		</ul>
