--- a/GestioneCorsi/WebContent/riguardonoi.html
+++ b/GestioneCorsi/WebContent/riguardonoi.html
@@ -8,9 +8,11 @@
 <div id="riguardonoi">
 	<div class="container">
 		<div class="row">
+		<hr class="colorgraph">
 			<h1 align="center" class="footertext">Riguardo il nostro team
 				Alfacom</h1>
 			<br>
+			
 			<div class="col-md-4" style="text-align: center;">
 				
 					<img src="img/GG.jpg" align="center" alt="Image" height="150"
