--- a/GestioneCorsi/WebContent/footer.html
+++ b/GestioneCorsi/WebContent/footer.html
@@ -1,10 +1,10 @@
-	
+<br>
+<br>
 <nav>
 	<h1>Navigazione</h1>
 	<ul>
-		<li><a href="home.jsp">Home</a></li>
-		<li><a href="acquisti.jsp">Acquista on-line</a></li>
-		<li><a href="carrello.jsp">Riepilogo acquisti</a></li>
+		<li><a href="paginaprincipale.jsp">Pagina principale</a></li>
+		<li><a href="riepilogo.jsp">Riepilogo corsi</a></li>
 	</ul>
 </nav>
 <nav>
@@ -18,10 +18,12 @@
 
 <section>
 	<h1>Social Media</h1>
-		<ul>
-			<li><a href="#">Facebook</a></li>
-			<li><a href="#">Instagram</a></li>
-			<li><a href="#">Twitter</a></li>
-		</ul>
+	<ul>
+		<li><a href="#">Facebook</a></li>
+		<li><a href="#">Instagram</a></li>
+		<li><a href="#">Twitter</a></li>
+	</ul>
 </section>
-<p class="copyright">Copyright Site.com<sup>&copy;</sup></p>
+<p class="copyright">
+	Copyright 2022 ManagementAlfacom.com<sup>&copy;</sup>
+</p>
