--- a/GestioneCorsi/WebContent/riguardonoi.html
+++ b/GestioneCorsi/WebContent/riguardonoi.html
@@ -8,11 +8,13 @@
 <div id="riguardonoi">
 	<div class="container">
 		<div class="row">
-		<hr class="colorgraph">
-			<h1 align="center" class="footertext">Riguardo il nostro team
-				Alfacom</h1>
+		<br>
+		<br>
+			<h2 align="center" class="footertext">Lasciati aiutare dal nostro team<br>
+				di prefessionisti <strong>Alfacom</strong></h2>
+
 			<br>
-			
+				<br>
 			<div class="col-md-4" style="text-align: center;">
 				
 					<img src="img/GG.jpg" align="center" alt="Image" height="150"
@@ -53,7 +55,8 @@
 			</div>
 
 		</div>
-
+	<br>
+	
 		<div class="row">
 			<div class="col-md-1"></div>
 			<div class="col-md-5" style="text-align: center;">
@@ -83,5 +86,6 @@
 			<div class="col-md-1"></div>
 
 		</div>
+		
 	</div>
 </div>
